# maimemo-desktop

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  index.ts  interpretation.ts  note.ts  notepad.ts  phrase.ts  study.ts  vocabulary.ts
src/components/: MiniWidget.vue
src/stores/: review.ts  study.ts
src/styles/: global.css
src/types/: index.ts
src/views/: BedtimeReview.vue  Dashboard.vue  Notepads.vue  Stats.vue  WordDetail.vue
